--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
+  convex_bottom_bar: ^3.1.0+1
+  flutter_zoom_drawer: ^3.0.3
 
 dev_dependencies:
   flutter_test:
